hphp/test/slow/lang/invariant_vsprintf.php.expectf
Fatal error: Uncaught exception 'HH\InvariantException' with message 'nope - 42' in :
Stack trace:
#0 %s/test/slow/lang/invariant_vsprintf.php(3): HH\invariant_violation()
#1 {main}
